feat(Auth): Impl Login and Logout
