# internal/interface/http/route/auth_routes.go
@@ -1,13 +1,17 @@
 package route
 
 import (
+	"github.com/SyahrulBhudiF/Doc-Management.git/internal/domain/dto"
 	"github.com/SyahrulBhudiF/Doc-Management.git/internal/interface/http/handler"
+	"github.com/SyahrulBhudiF/Doc-Management.git/internal/interface/http/midleware"
 	"github.com/gin-gonic/gin"
 )
 
-func RegisterAuthRoutes(rg *gin.RouterGroup, authHandler *handler.AuthHandler) {
+func RegisterAuthRoutes(rg *gin.RouterGroup, authHandler *handler.AuthHandler, mm *midleware.AuthMiddleware) {
 	auth := rg.Group("/auth")
 	{
-		auth.POST("/register", authHandler.Register)
+		auth.POST("/register", midleware.EnsureJsonValidRequest[dto.RegisterRequest](), authHandler.Register)
+		auth.POST("/login", midleware.EnsureJsonValidRequest[dto.LoginRequest](), authHandler.Login)
+		auth.DELETE("/logout", mm.EnsureAuthenticated(), midleware.EnsureJsonValidRequest[dto.LogoutRequest](), authHandler.Logout)
 	}
 }
